k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: a5a2dc5d892f748b79b165d1d4dd47eb-610696976.us-east-1.elb.amazonaws.com
      http:
        paths:
          - path: /products/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: products-service
                port:
                  number: 8002
          - path: /shopping/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: shopping-service
                port:
                  number: 8003
          - path: /customer/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: customer-service
                port:
                  number: 8001
